appId: com.arasdigital.nesymobile.rstest
---
- runFlow:
    when:
      visible: "Offline mode"
    commands:
      - tapOn: "OK"
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
    timeout: 15000
    optional: true
