appId: com.arasdigital.nesymobile.rstest
---
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
    timeout: 20000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 8000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 80
- inputText: "6880051000262417"
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
    timeout: 15000
    optional: true
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/tie_delivery_name"
    timeout: 25000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/tie_delivery_name"
- inputText: "Test Receiver"
- pressKey: Enter
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "com.arasdigital.nesymobile.rstest:id/btn_deliver"
    direction: DOWN
    timeout: 15000
- swipe:
    start: "25%, 78%"
    end: "75%, 78%"
    duration: 500
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_deliver"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btnDely"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btnDely"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- extendedWaitUntil:
    visible: "Stop List"
    timeout: 45000
    optional: true

