appId: com.arasdigital.nesymobile.rstest
---
- extendedWaitUntil:
    visible: "Waiting For Pickup"
    timeout: 15000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 10000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 100
- inputText: "6880051000264114"
- hideKeyboard
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "74901237799972"
    commands:
      - tapOn: "74901237799972"
- runFlow:
    when:
      visible: "Which operation do you want for this shipment?"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/complete_task"
    timeout: 25000
    optional: true
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/complete_task"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/complete_task"
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"
- extendedWaitUntil:
    visible: "Picked Up"
    timeout: 25000
    optional: true
