appId: com.arasdigital.nesymobile.rstest
---
- runFlow:
    when:
      visible:
        id: com.arasdigital.nesymobile.rstest:id/rv_notifications
    commands:
      - tapOn:
          id: com.arasdigital.nesymobile.rstest:id/btn_exit
- extendedWaitUntil:
    visible:
      id: com.arasdigital.nesymobile.rstest:id/manuel_input
    timeout: 20000
- tapOn:
    id: com.arasdigital.nesymobile.rstest:id/manuel_input
- tapOn:
    id: com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number
- eraseText: 40
- inputText: "6880051000269515"
- tapOn:
    id: com.arasdigital.nesymobile.rstest:id/btn_ok
- extendedWaitUntil:
    visible:
      id: nesy_probe_never
    timeout: 8000
    optional: true
