appId: com.arasdigital.nesymobile.rstest
---
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/btn_out"
    timeout: 15000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_out"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    timeout: 8000
    optional: true
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/auto_route"
    timeout: 8000
    optional: true
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/auto_route"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/auto_route"
- waitForAnimationToEnd
- swipe:
    start: "50%, 40%"
    end: "50%, 40%"
    duration: 3000
